--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>git repo 02</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
         <form action="">
@@ -31,6 +32,6 @@
 <input type="url"><br>
 <input type="week"><br>
         </form>
-    
+    <p>loving u is losing game </p>
 </body>
 </html>
