--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="assets\css\profile.css">
+    <link rel="stylesheet" href="assets/profile.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -11,7 +11,7 @@
         <div class="left_side">
             <div class="profiletext">
                 <div class="imgbx">
-                    <img src="assets\img\tht (3).jpeg" alt="M HASIBUL HASAN" style="width:200px;height:200px;">
+                    <img src="Img/tht (3).jpeg" alt="M HASIBUL HASAN" style="width:200px;height:200px;">
                 </div>
                 <h2>M HASIBUL HASAN <br><span>Web Developer</span></h2>
             </div>
